fix bug for timeline on IE

--- a/src/components/ThreeFaTimeline/index.scss
+++ b/src/components/ThreeFaTimeline/index.scss
@@ -40,7 +40,7 @@
   // }
 
   .title {
-    width: 100px;
+    min-width: 100px;
     font-size: 29px;
     font-weight: bold;
     color: #b50007;
@@ -52,7 +52,7 @@
   .content {
     border-top: 2px solid #b50007;
     padding-top: 35px;
-    width: 233px;
+    min-width: 233px;
     img {
       width: 100%;
       height: 150px;
